@@ -1,4 +1,11 @@
-$Id: CHANGES,v 1.199 2002/11/15 10:03:37 stelian Exp $
+$Id: CHANGES,v 1.200 2002/11/19 13:39:35 stelian Exp $
+
+Changes between versions 0.4b32 and 0.4b33 (released ?????????????????)
+=======================================================================
+
+1.	Added a note in the restore man page clarifying the question
+	'set the permissions on the current directory ?' asked by
+	restore at the end of treatment in -i and -x modes.
 
 Changes between versions 0.4b31 and 0.4b32 (released November 15, 2002)
 =======================================================================
